--- a/templates/OrderConfirmation_bkp.html
+++ b/templates/OrderConfirmation_bkp.html
@@ -1,6 +1,93 @@
-{% extends 'base.html' %}
-{% block content %}
-<link type="text/css" rel="stylesheet" href="/misc/css3/style.css" />
+{% include 'header.htm' %}
+
+<div class="float-left wid18">
+<div class="clr grey-left-one">
+    <div class="padtop81">GREY AREA 
+CMS Admin Control</div>
+</div>
+<div class="clr height9"></div>
+<div class="clr blue-border">
+<div class="clr blue-bg-header">
+My Account
+</div>
+<div class="clr my-account">
+<div class="clr height23">&nbsp;&nbsp;</div>
+<div class="txt-box1"></div>
+<div class="clr height12">&nbsp;&nbsp;</div>
+<div class="txt-box1"></div>
+<div class="clr height12">&nbsp;&nbsp;</div>
+<div class="clr wid187">
+<div class="float-left marleft10"><img src="images/sign-in.jpg" width="77" height="21" border="0" /></div>
+<div class="float-right new-customer marright10">Forgot Password</div>
+
+</div>
+<div class="clr height12">&nbsp;&nbsp;</div>
+<div class="clr wid157">
+<div class="float-left new-customer marleft10">New Customer? </div>
+<div class="float-right start marright10">Start Here</div>
+
+</div>
+</div>
+
+
+</div>
+<div class="clr height9">&nbsp;&nbsp;</div>
+<div class="clr blue-border">
+<div class="clr blue-bg-header">Resources</div>
+<div class="clr resources">
+  
+
+<div class="clr height12">&nbsp;&nbsp;</div>
+
+<div class="clr wid187"><img src="images/popular.jpg" /></div>
+<div class="left_product_page" >
+<div class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/search.asp?keyword=OnSale&amp;search.x=0&amp;search.y=0" target="_blank">Deep Blue Seas Foundation</a></div>
+</div>
+<div class="left_product_page" >
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/Returns-Guarantee_ep_78-1.html" target="_blank">Returns & Guarantee</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/Gift-Certificate_p_11.html" target="_blank">Gift Certificates</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/Sustainability-Mandate_ep_55-1.html" target="_blank">Sustainability Mandate</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/Shipping_ep_77-1.html" target="_blank">Shipping</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/Free-Shipping-in-FLORIDA_ep_72-1.html" target="_blank">Free Shipping in FLORIDA</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/Reef-Rewards_ep_43-1.html" target="_blank">Reef Rewards</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://www.saltwaterfish.com/Acclimation_ep_48-1.html" target="_blank">Acclimation</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="http://forums.saltwaterfish.com/" target="_blank">Message Board</a></div>
+</div>
+<div class="left_product_page">
+<div  class="img"><img src="images/arrow.jpg" width="15" height="12" border="0" /></div>
+<div class="float-left"><a href="saltwater.htm" target="_blank">SaltWater Fish School </a></div>
+</div>
+
+</div>
+
+
+</div>
+
+
+</div>
 <div class="float-left wid20">&nbsp;&nbsp;</div>
 <div class="float-left wid748">
  
@@ -460,5 +547,5 @@ In Order to proceed you are required to create an account. The account is used f
 		}
 	});	
 /* Toggle Panel end */
-</script></div>
-{% endblock content %}
+</script>
+{% include 'footer.htm' %}
