--- a/templates/admin_header.htm
+++ b/templates/admin_header.htm
@@ -37,7 +37,7 @@ mm_menu_0311194645_0.writeMenus();
 <script language="JavaScript1.2">mmLoadMenus();</script>
 <div align="center" class="shade-admin-new">
 <div style="width:1020px; border:solid 1px #c6c6c6; border-bottom:none;  -webkit-box-shadow:0 0px 8px rgba(0,0,0,0.3); -moz-box-shadow:0 0 8px rgba(0,0,0,0.3); box-shadow:0 0 8px rgba(0,0,0,0.3);">
-<div style="clear:both; float:left" class="admin-logo"><span class="admin-logo" style="clear:both; float:left"><a href="index.htm"><img src="/misc/images/logo.png" width="426" height="93" border="0" style="float:left" /></a></span></div>
+<div style="clear:both; float:left" class="admin-logo"><span class="admin-logo" style="clear:both; float:left"><a href="/apanel"><img src="/misc/images/logo.png" width="426" height="93" border="0" style="float:left" /></a></span></div>
 <div style="clear:both">&nbsp;&nbsp;</div>
 <div class="new-menu">
 	<ul id="men">
@@ -66,12 +66,12 @@ mm_menu_0311194645_0.writeMenus();
 		<li><a href="/products?page=1">Products</a>
 			<ul style="*margin-left:45px;">
 				<li><a href="/products?page=1">View/Edit</a></li>
-				<li><a href="4-products-1-view-edit.htm">Add Product</a></li>
+				<li><a href="/addproduct">Add Product</a></li>
 				<li><a href="#">Bundles</a></li>
-				<li><a href="#">Categories</a></li>
+				<li><a href="/categories?page=1">Categories</a></li>
 				<li><a href="#">Inventory</a></li>
-					<li><a href="products-wish-list.htm">Wish List</a></li>
-				<li><a href="products-7-reviews.htm">Reviews</a></li>
+					<li><a href="/product_wish_list?page=1">Wish List</a></li>
+				<li><a href="/all_product_reviews?page=1">Reviews</a></li>
 				<li><a href="products-import-export.htm">Import/Export</a></li>
 			</ul>
 		</li>
@@ -86,7 +86,7 @@ mm_menu_0311194645_0.writeMenus();
 			<ul  style="*margin-left:52px;">
 				<li><a href="/cmspages?page=1">Pages</a></li>
 				<li><a href="/addcmsform">Add Pages</a></li>
-				<li><a href="/addbanners">Add Banners</a></li>
+				<li><a href="/viewbanners">View Banners</a></li>
 				<li><a href="/titlesandcontent?page=1">Titles & Content</a></li>
 			</ul>
 		</li>
