--- a/templates/footer.htm
+++ b/templates/footer.htm
@@ -22,28 +22,28 @@
 <li><a href="/quicklist?cat=203"  >Invert on Sales</a></li>
 <li><a href="/quicklist?cat=223"  >Reef Packages on Sale</a></li>
 <li><a href="/quicklist?cat=197"  >Aquarium Supplies on Sale </a></li>
-<li><a href="specials.htm">Specials</a></li>
+<li><a href="/pages?pageid=91">Specials</a></li>
 </ul>
 
 </div></div>
 <div class="float-left wid122"><div class="float-left wid150">
 <ul class="footerlist">
   <span class="footertitle">SERCIVE</span>
-<li class="padtop24"><a href="http://www.saltwaterfish.com/Free-FedEx-Shipping-Discount-Shipping-at-Saltwaterfishcom_ep_45-1.html"  >Shipping</a></li>
-<li><a href="http://www.saltwaterfish.com/Contact-Us_ep_40.html"  >Contact Us</a></li>
-<li><a href="http://www.saltwaterfish.com/Money-Back-Guarantee_ep_39-1.html"  >Returns</a></li>
-<li><a href="http://www.saltwaterfish.com/Reef-Rewards_ep_43-1.html"  >Reef Rewards</a></li>
-<li><a href="http://www.saltwaterfish.com/Terms-and-Conditions_ep_2-1.html"  >Terms and Condition</a></li>
-<li><a href="guaranteeinfo.htm">Guarantee Info</a></li>
+<li class="padtop24"><a href="/pages?pageid=45"  >Shipping</a></li>
+<li><a href="/pages?pageid=40"  >Contact Us</a></li>
+<li><a href="/pages?pageid=39"  >Returns</a></li>
+<li><a href="/pages?pageid=43"  >Reef Rewards</a></li>
+<li><a href="/pages?pageid=2"  >Terms and Condition</a></li>
+<!--<li><a href="guaranteeinfo.htm">Guarantee Info</a></li>-->
 </ul>
 
 </div></div>
 <div class="float-left wid176"><ul class="footerlist" >
   <span class="footertitle">RESOURCES</span>
-<li class="padtop24"><a href="http://www.saltwaterfish.com/product_index.asp"  >Product Index</a></li>
-<li><a href="http://www.saltwaterfish.com/category_index.asp"  >Cateogry Index</a></li>
-<li><a href="http://www.saltwaterfish.com/Acclimation_ep_48-1.html"  >Acclimation Video</a></li>
-<li><a href="http://forums.saltwaterfish.com/f/"  >Forum</a></li>
+<li class="padtop24"><a href="/productindex"  >Product Index</a></li>
+<li><a href="/categoriesindex"  >Cateogry Index</a></li>
+<li><a href="/pages?pageid=48"  >Acclimation Video</a></li>
+<li><a href="http://forums.saltwaterfish.com/f/"  target=blank>Forum</a></li>
 
 </ul>
 </div>
@@ -52,6 +52,8 @@
 <div class="we_accept clr"><div class="float-left padleft40 padtop10 padright20">We Accept:</div><div class="float-left"><a href="#"><img src="misc/images/visa.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/master.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/amex.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/discover.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/paypal.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/google.jpg" border="0" /></a></div>
 </div>
 </div>
+<form method="post" name="mailing" action="http://saltwaterfish.us2.list-manage1.com/subscribe/post?u=fe7ad84cfa3047b07306cbd74&amp;id=f673568c4c" style="margin: 0px; padding: 0px;">
+<input name="subscribe" value="1" checked="checked" type="hidden">
 <div class="float-left wid257">
 <div align="left" class="txt1 clr padtop30 padbottom10">Friend and Follow us on:</div>
 <div align="left" class="txt1 clr padtop7">
@@ -59,7 +61,7 @@
 </div>
 <div align="left" class="sign clr">Sign up for <span>Email</span></div>
 <div class="sign-box clr padtop5">
-<div class="float-left wid151 height30"><input name="" type="text" placeholder="Enter email address" /></div>
+<div class="float-left wid151 height30"><input name="email" type="text" placeholder="Enter email address" /></div>
 <div class="float-left wid103 height30"><input name="" type="submit" value="Sign In" /></div>
 </div>
 <div align="left" class="get clr" >And Get 15% <span>OFF </span><br />
@@ -69,7 +71,7 @@ Your First Purchase</div>
 <span>772-462-0203</span> </div>
 <div class="clr">&nbsp;</div>
 </div>
-
+</form>
 </div>
 <div class="copy_right clr">All images, picture and descriptions are generalizations and cannot be exact representations.<br />
 Copyright 2013 Saltwaterfish.com  All Rights Reserved</div>
