--- a/templates/front.htm
+++ b/templates/front.htm
@@ -7,14 +7,10 @@
 <div class="wid748 float-left">
 <div class="height12 clr"></div>
 <div  class="content-bg1 clr">
-  <div class="padtop170">GREY AREA 
-    CMS 
-    Admin Control</div>
+  <div class=" "><a href="{{banner_main.banner_link}}" target=blank><img src="http://commondatastorage.googleapis.com/{{banner_main.banner_image}}"></a></div>
 </div>
 <div class="height12 clr"></div>
-<div class="content-bg2 clr"><div class="padtop140">GREY AREA 
-CMS 
-Admin Control</div></div>
+<div class="content-bg2 clr"><div class=""><a href="{{banner_main.banner_link}}" target=blank><img src="http://commondatastorage.googleapis.com/{{banner_main.banner_image}}"> </a></div></div>
 
 
 
