--- a/templates/header.htm
+++ b/templates/header.htm
@@ -64,7 +64,7 @@ Shipping Rates</div>
 <li><a href="/myaccount" class="style1">My Account</a>
 <ul>
 <li><a href="/myaccount">My Account</a></li>
-<li><a href="orderstatus.htm">Order Status</a></li>
+<li><a href="/orderstatus">Order Status</a></li>
 <li><a href="shippingstatus.htm">Shipping Status</a></li>
 <li><a href="returnclaims.htm">Return Claims</a></li>
 <li><a href="/mywishlist">Wish List</a></li>
@@ -99,7 +99,7 @@ Shipping Rates</div>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Fish</a></span>.</div>
+<span><a href="/quicklist?cat=15" >click here</a></span> to see a Quick View of    <span> all Available Marine Fish </span>.</div>
 <div class="clr padtop20">
 
 <table class="sub_txt " ><tr >
@@ -127,7 +127,7 @@ Shipping Rates</div>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Inverts</a></span>.</div>
+<span><a href="/quicklist?cat=17" >click here</a></span> to see a Quick View of    <span> all Available Marine Inverts</span>.</div>
 <div class="clr padtop20">
 <table class="sub_txt " ><tr >
 {% for cats in "17"|categoriesdisplay %}
@@ -147,12 +147,12 @@ Shipping Rates</div>
 </li>
 </ul>
 </li>
-<li><a href="/quicklist?cat=16" target="_blank">Corals</a>
+<li><a href="/quicklist?cat=16">Corals</a>
 <ul>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Corals</a></span>.</div>
+<span><a href="/quicklist?cat=16" >click here</a></span> to see a Quick View of    <span>all Available Marine Corals</span>.</div>
 <div class="clr padtop20">
 <table class="sub_txt " ><tr >
 {% for cats in "16"|categoriesdisplay %}
@@ -179,7 +179,7 @@ Shipping Rates</div>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >click here</a></span> to see a Quick View of    <span><a href="http://saltwater2013.dev.mvisolutions.com/sitemap/saltwaterfish-mastercategory.htm" >all Available Marine Corals</a></span>.</div>
+<span><a href="/quicklist?cat=3" >click here</a></span> to see a Quick View of    <span> all Available Marine Supplies</span>.</div>
 <div class="clr padtop20">
 <table class="sub_txt " ><tr >
 {% for cats in "3"|categoriesdisplay %}
@@ -199,7 +199,7 @@ Shipping Rates</div>
 </li>
 </ul>
 </li>
-<li><a href="/quicklist?cat=298" target="_blank">Free Shipping Store</a></li>
+<li><a href="/quicklist?cat=298">Free Shipping Store</a></li>
 </ul>
 </div>
 </div>
@@ -207,4 +207,4 @@ Shipping Rates</div>
 
 
 </div>
-<div class="clr grey-area">GREY AREA CMS Admin Control</div>
+<div class="clr grey-area"><a href="{{banner_top.banner_link}}" target=blank><img src="{{banner_top.banner_image}}"></a></div>
