--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -1,5 +1,6 @@
-{% include 'header.htm' %}
-{% include 'myaccount_widget.htm' %}
+{% extends 'base.html' %}
+{% block content %}
+{% load tagsfilter %}
 <style type="text/css">
 <!--
 .style12 {color: #FF6600}
@@ -33,8 +34,8 @@ $(document).ready(function(){
  
 
  
-<div class="width10 float-left">&nbsp;&nbsp;</div>
-<div class="wid748 float-left">
+<div class="float-left width10">&nbsp;&nbsp;</div>
+<div class="float-left wid748 padtop1">
 <div class="height12 clr"></div>
 <div  class=" clr">
   <div >
@@ -147,7 +148,7 @@ $(document).ready(function(){
     </table></td>
   </tr>
   <tr>
-    <td colspan="3"><span class="style11">My Last Support Requests (30 days) <a href="#" class="style7">Add Support request </a></span></td>
+    <td colspan="3"><span class="style11">My Last Support Requests (30 days) <a href="/addrequest" class="style7">Add Support request </a></span></td>
   </tr>
   <tr>
     <td colspan="3"><table width="600" border="0" cellpadding="3" cellspacing="1" bgcolor="#CCCCCC">
@@ -157,18 +158,14 @@ $(document).ready(function(){
         <td width="171" class="style11"><span class="style3">Subject</span></td>
         <td width="153" bgcolor="#C4C4C4" class="style11"><span class="style3">Last Action</span></td>
       </tr>
+	  {% for item in crms %}
       <tr bgcolor="#FFFFFF">
-        <td class="style11">&nbsp;</td>
-        <td class="style11">&nbsp;</td>
-        <td class="style11">&nbsp;</td>
-        <td class="style11">&nbsp;</td>
+        <td class="style11"><a href="/editrequestform?crmid={{item.id}}">{{item.id}}</a></td>
+        <td class="style11">{% for dep in item.departmentid|crmdepartment %} {{dep.department}} {% endfor %}</td>
+        <td class="style11">{{item.subject}}</td>
+        <td class="style11">{% for dep in item.id|crmlastmessage %} {%if dep.sender == 1 %}Customer {%else%} Staff{% endif %} {% endfor %}</td>
       </tr>
-      <tr bgcolor="#FFFFFF">
-        <td class="style11">&nbsp;</td>
-        <td class="style11">&nbsp;</td>
-        <td class="style11">&nbsp;</td>
-        <td class="style11">&nbsp;</td>
-      </tr>
+      {%endfor%}
     </table></td>
   </tr>
   <tr>
@@ -189,5 +186,5 @@ $(document).ready(function(){
 </div></div>
 <div class="float-left width10"></div>
 
-</div>
-{% include 'footer.htm' %}
+</div></div></div>
+{% endblock content %}
