--- a/templates/CheckOutLogin_bkp2.html
+++ b/templates/CheckOutLogin_bkp2.html
@@ -1,100 +1,107 @@
 {% include 'header.htm' %}
-<link type="text/css" rel="stylesheet" href="/misc/css/style.css" />
+ <link type="text/css" rel="stylesheet" href="/misc/sty.css" />
+<link href="/misc/css3/style.css" rel="stylesheet" type="text/css" />
 <link href="/misc/style.css" rel="stylesheet" type="text/css" />
- <link href="/misc/sty.css" rel="stylesheet" type="text/css" />
 
- 
+<script language="javascript" type="text/javascript" src="/misc/js/jquery-1.7.2.min.js"></script>
+<script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
+<script>
+$(function() {
+
+   $( "#form"  ).submit(function() {
+      var thisform = $('#form');
+	  if (thisform.valid()) 
+        return true;
+      else
+	  {
+         alert("Please fill the mandatory fields in the required format");
+	  }
+      return false;
+     });
+
+   $( "#form" ).validate({
+           rules: {
+                   {{ form.username.html_name }}: {
+                           required: true,
+                           maxlength: 30,
+                           customvalidation: true
+                   }
+           },
+           messages: {
+                   {{ form.username.html_name }}: {
+                           required: "*",
+                   }
+           },
+
+           errorPlacement: function(error, element){
+                            error.insertAfter(element);
+                       },
+                   
+           showErrors: function(errorMap, errorList){
+                              this.defaultShowErrors();
+                       }
+   });
+
+   $.validator.addMethod("customvalidation",
+           function(value, element) {
+		     if (element.name == '{{ form.username.html_name }}')
+                   return /^[A-Za-z\d_\.-]+@[A-Za-z\d_\.-]+\.[A-Za-z\d_\.-]+$/.test(value);
+           },
+   ""
+   );
+
+});
+</script>
+
 {% include 'myaccount_widget.htm' %}
+
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748">
 <div class="clr">
-<div class="clr">&nbsp;</div>
-
-<div class="cart_box" align="center">
-<div class="cart_top">
-<div class="cart_left">
-<div class="cart_heading">1 Item has been added to your cart</div>
+<div class="clr">&nbsp;&nbsp;</div>
+<div class="clr">&nbsp;&nbsp;</div>
+  <div class="login_container">
+<div class="login_left">
+  <div class="login_heading">
+    <div align="justify">Returning Customers:</div>
+  </div>
+  <p align="justify">
+  Lorem ipsum dolor sit amet, habitasse pretium dolor sociis. Nulla et facilisis interdum elit amet erat, consectetuer condimentum eaque, ante maecenas. Suspendisse libero diam, doloribus aliquam consectetuer nec.
+  </p>
 <div class="clr">
-<div class="float_left"><img src="{{item.image1}}" width="194" height="160" /></div>
-<div class="cart_img_right">
-{{ item.name }}
-<br>{{ item.extra_field_3 }}
+<form name="form" id="form" action="/custlogin" method="post">
+{% csrf_token %}
+{% if message or error_message1 %}
+      <p class="greentext">{{ message }} <span class="redtext">{{ error_message1 }}</span></p>{% endif %}
+<table border="0">
+  <tr><td>EMail</td><td>{{ form.username }}</td></tr>
+  <tr><td>Password</td><td>{{ form.password }}</td></tr>
+  <tr><td colspan="2"><img src="{{ recaptcha }}" /></td></tr>
+  <tr><td>Verify</td><td>{{ form.recaptcha }}<input type="hidden" name="target" value='/orderconfirmation'></td></tr>
+  <tr><td colspan="2"><input type=image src="/misc/images/sign-in.jpg" width="77" height="21" border="0" /></td></tr>
+</table>
+</form>
 </div>
+<div class="password_link"><a href="#">Forgot your password?</a></div>
+<div class="clr">&nbsp;&nbsp;</div>
 </div>
-</div>
-<div class="cart_right">
+
+
+
+
+<div class="login_right">
+<div class="login_heading">Returning Customers:</div>
+<p align="justify">
+Lorem ipsum dolor sit amet, habitasse pretium dolor sociis. Nulla et facilisis interdum elit amet erat, consectetuer condimentum eaque, ante maecenas. Suspendisse libero diam, doloribus aliquam consectetuer nec.</p>
+<form method="POST" action="/guestlogin">
+{% csrf_token %}
 <div class="clr">
-<div class="close">Close<span><img src="misc/images/close_button.png" width="25" height="25" /></span></div>
+<div class="clr"><label>Email</label><input type="text" name="EMail" value="" class="wid210" /></div>
 </div>
-<div class="clr card1_txt_right">
-Your Cart Contanins {{ItemCount}} items<br />
-<span class="price-final">Order Subtotal: ${{OrderSubTotal}}</span>
+<div><input type="submit" name="cmdSubmit" value="Continue as Guest" class="button"></div>
+</div></div></div>
 </div>
-<div class="button_top float-right">
-<div class="button-latest float-right"><a href="/productlist">Continue Shopping</a></div>
-<div class="height9 clr float-right">&nbsp;</div>
-<div class="button-latest"><a href="/viewcart">View Cart & checkout</a></div>
-</div>
-</div>
-<div class="clr"></div>
-</div>
-<div class="cart_bottom">
-<div class="cart_bottom_heading" align="left">You May Also Like</div>
-<div class="slide_top">
-<div class="slide_middle">
-<ul>
-<li>
-<div class="clr">
-<div class="clr"><span class="product_heading">Seachem Reef Carbonate</span><br />250ml</div>
-<div class="clr padtop10">
-<div class="float_left"><img src="misc/images/product_img1.jpg" /></div>
-<div class="float_left padleft10">
-<div class="price-final">$3.99</div>
-<div class="clr"><a href="#"><img src="misc/images/add_tant.png" border="0" /></a></div>
-</div>
-</div>
-<div class="clr">&nbsp;</div>
-</div>
-</li>
-<li>
-<div class="clr">
-<div class="clr"><span class="product_heading">Seachem Reef Carbonate</span><br />300 gram</div>
-<div class="clr padtop10">
-<div class="float_left"><img src="misc/images/product_img2.jpg" /></div>
-<div class="float_left padleft10">
-<div class="price-final">$5.99</div>
-<div class="clr"><a href="#"><img src="misc/images/add_tant.png" border="0" /></a></div>
-</div>
-</div>
-<div class="clr">&nbsp;</div>
-</div>
-</li>
-<li>
-<div class="clr">
-<div class="clr"><span class="product_heading">Seachem Reef Carbonate</span><br />500 ml</div>
-<div class="clr padtop10">
-<div class="float_left"><img src="misc/images/product_img3.jpg" /></div>
-<div class="float_left">
-<div class="price-final">$3.99</div>
-<div class="clr"><a href="#"><img src="misc/images/add_tant.png" border="0" /></a></div>
-</div>
-</div>
-<div class="clr">&nbsp;</div>
-</div>
-</li>
-</ul>
-</div>
-</div>
-</div>
-
-</div>
-
-</div>
-
-
-
-
-</div>
+</form>
 <div class="float-left wid10"></div>
 
 </div>
@@ -102,7 +109,7 @@ Your Cart Contanins {{ItemCount}} items<br />
 <div class="clr">
 <div class="float-left">
 
-<div class="float-left wid150 padleft20">
+<div class="float-left wid150 padleft15">
 <ul class="footerlist" >
   <span class="footertitle">SHOP</span>
 <li class="padtop24"><a href="http://www.saltwaterfish.com/Fish_c_15.html" target="_blank">Saltwaterfish</a></li>
@@ -149,13 +156,13 @@ Your Cart Contanins {{ItemCount}} items<br />
 </div>
 <div class="float-left wid66"></div>
 <div class="clr">&nbsp;</div>
-<div class="we_accept clr"><div class="float-left padleft40 padtop10 padright20">We Accept:</div><div class="float-left"><a href="#"><img src="misc/images/visa.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/master.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/amex.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/discover.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/paypal.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/google.jpg" border="0" /></a></div>
+<div class="we_accept clr"><div class="float-left padleft40 padtop10 padright20">We Accept:</div><div class="float-left"><a href="#"><img src="images/visa.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="images/master.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="images/amex.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="images/discover.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="images/paypal.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="images/google.jpg" border="0" /></a></div>
 </div>
 </div>
 <div class="float-left wid257">
 <div align="left" class="txt1 clr padtop30 padbottom10">Friend and Follow us on:</div>
 <div align="left" class="txt1 clr padtop7">
-<img src="misc/images/face-icon.jpg" />&nbsp;<img src="misc/images/twitter.jpg" />&nbsp;<img src="misc/images/utube.jpg" />&nbsp;<img src="misc/images/g+.jpg" />
+<img src="images/face-icon.jpg" />&nbsp;<img src="images/twitter.jpg" />&nbsp;<img src="images/utube.jpg" />&nbsp;<img src="images/g+.jpg" />
 </div>
 <div align="left" class="sign clr">Sign up for <span>Email</span></div>
 <div class="sign-box clr padtop5">
