--- a/templates/ViewCart_bkp.html
+++ b/templates/ViewCart_bkp.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<link type="text/css" rel="stylesheet" href="/misc/css3/style.css" />
-<style>
-.height12 {
-    height: 7px !important;
-}
-</style>
+ <link href="/misc/css3/style.css" rel="stylesheet" type="text/css" />
+  
+{% load tagsfilter %}
+
 <div class="float-left width8">&nbsp;&nbsp;</div>
 <div class="float-left wid748">
  
@@ -26,11 +24,11 @@
 </div>
 </div>
 <div class="clr card2_100 padtop10">
-<div class="float_left card2_alignC wid105"><img src="{{item.thumbnail}}" width=60 height=60/></div>
-<div class="float_left card2_alignL padleft5 wid150">{{item.name|floatformat:2}}<br>{{item.extra_field_3}}</div>
-<div class="float_left orange_text card2_alignC pwid4"><span class="card2_strike">${{item.price|floatformat:2}}<br></span>{% if item.saleprice > 0 %} ${{ item.saleprice }} {% endif %}</div>
+<div class="float_left card2_alignC wid105"><img src="{{item.image1}}" width=60 height=60/></div>
+<div class="float_left card2_alignL padleft5 wid150">{{item.name}}<br>{{item.extra_field_3}}</div>
+<div class="float_left orange_text card2_alignC pwid4"><span class="card2_strike">${{item.price}}<br></span>{% if item.saleprice > 0 %} ${{ item.saleprice }} {% endif %}</div>
 <div class="float_left card2_alignC wid70"><input type="text" name="quantity" value="{{ item.quantity }}" size="1" /><br><input type="submit" name="cmdUpdate" value="Update"><br /><input type="submit" name="cmdDelete" value="Delete" onclick="javascript:return confirm('Are you sure you want to delete this item from your cart ?')"></div>
-<div class="float_left card2_alignC wid5">${{item.subtotal|floatformat:2}}</div>
+<div class="float_left card2_alignC wid5">${{item.subtotal}}</div>
 <div class="clr"></div>
 </div>
 <div class="clr card2_hor_line"></div>
@@ -41,23 +39,23 @@
 <table>
 <tr>
 	<td>Subtotal</td>
-	<td>${{item.subtotal|floatformat:2}}</td>
+	<td>${{item.subtotal}}</td>
 </tr>
 <tr>
 	<td>Fuel surcharge</td>
-	<td>${{item.fuelcharge|floatformat:2}}</td>
+	<td>$0.00</td>
 </tr>
 <tr>
 	<td>Promotions:</td>
 	<td>$0.00</td>
 </tr>
 <tr>
-	<td>{{item.tax|floatformat:2}}% of Tax</td>
-	<td>$<b>{{item.taxvalue|floatformat:2}}</td>
+	<td>{{item.tax}}% of Tax</td>
+	<td>$<b>{{item.taxvalue}}</td>
 </tr>
 <tr>
 	<td><b>Supplies Total</b></td>
-	<td>$<b>{{item.total|floatformat:2}}</b></td>
+	<td>$<b>{{item.total}}</b></td>
 </tr>
 </table>
 </form>
@@ -141,7 +139,7 @@ Cart is Empty
 <div class="clr">
 <div class="order_left" align="left">Subtotal</div>
 <div class="order_right">
-<div class="float_right">${{SubTotal|floatformat:2}}</div>
+<div class="float_right">${{SubTotal}}</div>
 
 </div>
 <div class="clr"></div>
@@ -150,7 +148,7 @@ Cart is Empty
 <div class="clr">
 <div class="order_left wid115" align="left">Estimated Shipping</div>
 <div class="order_right">
-<div class="float_right">${{ShippingTotal|floatformat:2}}</div>
+<div class="float_right">${{ShippingTotal}}</div>
 
 </div>
 <div class="clr"></div>
@@ -159,7 +157,7 @@ Cart is Empty
 <div class="clr">
 <div class="order_left" align="left">Fuel Surcharge</div>
 <div class="order_right">
-<div class="float_right">${{FuelTotal|floatformat:2}}</div>
+<div class="float_right">${{FuelTotal}}</div>
 
 </div>
 <div class="clr"></div>
@@ -168,7 +166,7 @@ Cart is Empty
 <div class="clr">
 <div class="order_left" align="left">Estimated Tax</div>
 <div class="order_right">
-<div class="float_right">${{TaxTotal|floatformat:2}}</div>
+<div class="float_right">${{TaxTotal}}</div>
 
 </div>
 <div class="clr"></div>
@@ -177,7 +175,7 @@ Cart is Empty
 <div class="clr padbottom10">
 <div class="order_left" align="left"><span>Promotions Applied</span></div>
 <div class="order_right">
-<div class="float_right"><span>${{PromotionsTotal|floatformat:2}}</span></div>
+<div class="float_right"><span>${{PromotionsTotal}}</span></div>
 </div>
 <div class="clr"></div>
 </div>
@@ -185,20 +183,15 @@ Cart is Empty
 <div class="clr">
 <div class="order_left" align="left"><strong>ORDER TOTAL</strong></div>
 <div class="order_right">
-<div class="float_right"><strong>${{OrderTotal|floatformat:2}}</strong></div>
+<div class="float_right"><strong>${{OrderTotal}}</strong></div>
 </div>
 <div class="clr"></div>
 </div>
 {% if MyCartItems %}
 <div class="clr padtop15 padbottom15" align="left"><img src="misc/images/paypal_icon1.jpg" /></div>
-<div class="wid270 pad-tb"><div class="button33">
-{% if not request.session.IsLogin %}
-<a href="/checkoutlogin"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
-{% elif request.session.IsLogin %}
-<a href="/orderconfirmation"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
-{% endif %}
+<div class="wid270 pad-tb"><div class="button33"><a href="/checkoutlogin"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
 <div class="clr height1"></div></div>
-<div class="clr padtop5 padbottom10"><a href="/orderconfirmation?gateway=paypal"><img src="misc/images/paypal_icon3.jpg" width="240" /></a></div>
+<div class="clr padtop5 padbottom10"><img src="misc/images/paypal_icon3.jpg" width="240" /></div>
 </div>
 {% endif %}
 <div class="clr marleft20" >
@@ -231,3 +224,4 @@ You have not yet qualified for this promtion</font></div>
 
 </div>
 {% endblock content %}
+
