--- a/templates/left_menu_cms.htm
+++ b/templates/left_menu_cms.htm
@@ -14,11 +14,11 @@
 </div>
 <div style="clear:both; width:187px; padding-top:6px; padding-left:5px;">
 <div style="float:left; padding-top:3px;"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div style="float:left"><a href="/addcmsform">View/Edit Banners</a></div>
+<div style="float:left"><a href="/viewbanners">View/Edit Banners</a></div>
 </div>
 <div style="clear:both; width:187px; padding-top:6px; padding-left:5px;">
 <div style="float:left; padding-top:3px;"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div style="float:left"><a href="/addcmsform">Add Banners</a></div>
+<div style="float:left"><a href="/addbannerform">Add Banners</a></div>
 </div>
 
 <div style="clear:both; width:187px; padding-top:6px; padding-left:5px;">
